--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-  outline: 1px solid red !important;
+  /* outline: 1px solid red !important; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -18,8 +18,7 @@ body {
 
 main {
   width: 100vw;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
+  padding: 2rem 7rem 3rem 7rem;
 }
 
 .container-centered {
