registered and logout implemented

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -60,5 +60,10 @@
 .login-information-header {
   display: flex;
   justify-content: space-around;
+  align-items: center;
   width: 250px;
+}
+
+.pointer {
+  cursor: pointer;
 }
