login and registered completed

--- a/src/pages/Register/style.css
+++ b/src/pages/Register/style.css
@@ -40,3 +40,10 @@
 .color-yellowgreen {
   background-color: yellowgreen;
 }
+
+.log-in-register-text {
+  margin-left: 15px;
+  font-weight: bold;
+  color: yellowgreen;
+  cursor: pointer;
+}
