upload page and upload file completed

--- a/src/components/Input/style.css
+++ b/src/components/Input/style.css
@@ -1,7 +1,6 @@
 .input-wrapper {
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
   margin-top: 10px;
 }
 
@@ -12,13 +11,14 @@
   height: 30px;
   padding-left: 10px;
   padding-right: 10px;
-  margin-top: 5px;
   font-size: 15px;
 }
 
 .input-label {
+  margin-bottom: 5px;
   font-size: 30px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .withError {
