--- a/src/pages/Search/style.css
+++ b/src/pages/Search/style.css
@@ -11,6 +11,12 @@
   margin-right: 20px;
 }
 
+.gifs-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 /* Spinner */
 .lds-ellipsis {
   display: inline-block;
