--- a/src/pages/Search/style.css
+++ b/src/pages/Search/style.css
@@ -1,7 +1,7 @@
 .title-wrapper {
   display: flex;
   align-items: baseline;
-  border-bottom: 5px orange solid;
+  border-bottom: 5px violet solid;
   padding-bottom: 10px;
   margin-bottom: 20px;
 }
